version/0.21/_sources/api/solver/_autosummary/settings/turbulence_specification.rst.txt
:orphan:

.. _turbulence_specification:

turbulence_specification
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.turbulence_specification.turbulence_specification
    :show-inheritance:

.. rubric:: Included in:

================================================   =======================

Parent                                                             Summary

================================================   =======================
:ref:`turbulence <turbulence>`                         Help not available.

:ref:`turbulence <turbulence_1>`                       Help not available.

:ref:`turbulence <turbulence_2>`                       Help not available.

:ref:`recirculation_inlet <recirculation_inlet>`       Help not available.

:ref:`turbulence <turbulence_5>`                       Help not available.

================================================   =======================

