version/0.28/_sources/api/solver/_autosummary/settings/turbulence_specification.rst.txt
:orphan:

.. _turbulence_specification:

turbulence_specification
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.turbulence_specification
    :show-inheritance:

.. rubric:: Included in:

====================================================   =====================================================================

Parent                                                                                                               Summary

====================================================   =====================================================================
:ref:`turbulence <turbulence>`                                      Allows to change turbulence model variables or settings.

:ref:`turbulence_1 <turbulence_1>`                                  Allows to change turbulence model variables or settings.

:ref:`turbulence_2 <turbulence_2>`                                  Allows to change turbulence model variables or settings.

:ref:`recirculation_inlet_1 <recirculation_inlet_1>`       Allows to change recirculation-inlet model variables or settings.

:ref:`turbulence_5 <turbulence_5>`                                  Allows to change turbulence model variables or settings.

====================================================   =====================================================================

